# sicc

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
backend/ir/assignment/: IR.tex
common/: Cargo.toml
common/src/: constants.rs  entry_points.rs  error.rs  lib.rs  metadata.rs  thread_pool_executor.rs
common/src/ast/: ast_struct.rs  core.rs  data_type.rs  mod.rs  node_type.rs  syntax_element.rs
frontend/: Cargo.toml
frontend/LaTeX template/: source.txt
frontend/src/: lib.rs
frontend/src/lexer/: lexer_core.rs  mod.rs  token.rs
frontend/src/utils/: entry_points.rs  error.rs  mod.rs  thread_pool_executor.rs
frontend/tests/: lexer_tests.rs
integration/: Cargo.toml
integration/src/: lib.rs  module.rs
ir/: Cargo.toml  Dockerfile  assign_ir.tex
ir/assignment/tex/: file.c  output_while_loop.ll  sample.rs
ir/src/: block.rs  core.rs  lib.rs  primitive.rs  statement.rs  store.rs
ir/tests/: base.rs  combination.rs  edge.rs
lexer/: Cargo.toml  Dockerfile
lexer/assignment/: main.tex
lexer/assignment/assignment_tex/: main.tex
lexer/src/: core.rs  lexer_core.rs  lib.rs  token.rs
lexer/tests/: base_tests.rs  combination.rs  edge_tests.rs  error_tests.rs
parser/: Cargo.toml  Dockerfile
parser/assignment/: main.tex
parser/src/: block.rs  core.rs  lib.rs  mod.rs  parse_binary_exp.rs  parse_block.rs  parse_expression.rs  parse_token.rs  parse_top_level.rs  parser_core.rs  parser_utils.rs  primitive.rs  statement.rs
parser/tests/: base_tests.rs  combination.rs  edge_tests.rs  error_tests.rs
src/: compile.rs  lib.rs  main.rs  run.rs
sts/: Cargo.toml  Dockerfile
sts/assignment/tex/: main.tex
sts/src/: block.rs  core.rs  lib.rs  statement.rs
sts/tests/: base_tests.rs  combination_tests.rs
symbol_table/assignment/tex/: fphw.cls  main.tex
symbol_table/src/: block.rs  core.rs  lib.rs  statement.rs  symbol_table_core.rs  symbol_table_statement.rs  symbol_table_struct.rs  symbol_table_top_level.rs
symbol_table/tests/: base_tests.rs  combination_tests.rs  edge_tests.rs  error_tests.rs  symbol_table_tests.rs
