[package]
name = "sicc"
version = "0.1.0"
edition = "2021"

[lib]
name = "sicc"
path = "src/lib.rs"

[dependencies]
llvm-sys = "170"
threadpool = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
safe_llvm = { git = "https://github.com/UnionCompilerDesign/safe_llvm.git", branch = "main" }

lexer = { path = "./lexer" }
parser = { path = "./parser" }
sts = { path = "./sts" }
common = { path = "./common" }
ir = { path = "./ir"}
integration = { path = "./integration" }

[workspace]
members = [
    "./common",
    "./integration",
    "./ir",
    "./lexer",
    "./parser",
    "./sts",
]

[profile.dev]
debug = true
